basic integration of bit-vector solver in ToySolver.SMT.SMTLIB2Solver

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -415,6 +415,8 @@ Executable toysmt
     base,
     containers,
     data-default-class,
+    -- TODO: remove intern dependency
+    intern,
     mtl,
     parsec,
     toysolver,
