--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -236,6 +236,7 @@ Library
      ToySolver.EUF.EUFSolver
      ToySolver.EUF.FiniteModelFinder
      ToySolver.Combinatorial.BipartiteMatching
+     ToySolver.Combinatorial.HittingSet.DAA
      ToySolver.Combinatorial.HittingSet.Simple
      ToySolver.Combinatorial.HittingSet.HTCBDD
      ToySolver.Combinatorial.HittingSet.SHD
