--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -348,6 +348,7 @@ Library
      ToySolver.SAT.MUS.Enum.Base
      ToySolver.SAT.MUS.Enum.CAMUS
      ToySolver.SAT.MUS.Enum.DAA
+     ToySolver.SAT.MUS.Enum.GurvichKhachiyan1999
      ToySolver.SAT.MUS.Enum.MARCO
      ToySolver.Version.TH
      Paths_toysolver
