--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -159,6 +159,7 @@ Library
      process >=1.1.0.2,
      pseudo-boolean >=0.1.3.0 && <0.2.0.0,
      queue,
+     scientific,
      semigroups >=0.17,
      sign >=0.2.0 && <1.0.0,
      stm >=2.3,
@@ -505,6 +506,7 @@ Executable toyconvert
     data-default-class,
     filepath,
     pseudo-boolean,
+    scientific,
     text,
     toysolver
   Default-Language: Haskell2010
@@ -660,6 +662,7 @@ Executable svm2lp
     base,
     containers,
     data-default-class,
+    scientific,
     split,
     text,
     toysolver
