remove time15 flag and always require time >=1.5.0

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -101,10 +101,6 @@ Flag Exceptions06
   Description: use exceptions >=0.6
   Manual: False
 
-Flag Time15
-  Description: use time >=1.5.0
-  Manual: False
-
 Flag LogicTPTP045
   Description: use logic-TPTP >=0.4.5.0
   Manual: False
@@ -165,7 +161,7 @@ Library
      stm >=2.3,
      template-haskell,
      text >=1.1.0.0,
-     time,
+     time >=1.5.0,
      transformers >=0.2,
      transformers-compat >=0.3,
      unordered-containers >=0.2.3 && <0.3.0,
@@ -392,13 +388,10 @@ Executable toysat
     process >=1.1.0.2,
     pseudo-boolean,
     temporary,
+    time,
     toysolver,
     unbounded-delays,
     vector
-  if flag(Time15)
-    Build-Depends: time >=1.5.0
-  else
-    Build-Depends: time <1.5.0, old-locale
   Default-Language: Haskell2010
   Other-Extensions: ScopedTypeVariables, CPP
   GHC-Options: -rtsopts -threaded
