--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -283,6 +283,7 @@ Library
      ToySolver.Data.MIP.Solver.CBC
      ToySolver.Data.MIP.Solver.Glpsol
      ToySolver.Data.MIP.Solver.GurobiCl
+     ToySolver.Data.MIP.Solver.LPSolve
      ToySolver.Data.MIP.Solver.SCIP
      ToySolver.Data.OrdRel
      ToySolver.Data.Polynomial
