:sparkles: add ToySolver.Data.MIP.Solver.CPLEX module

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -283,6 +283,7 @@ Library
      ToySolver.Data.MIP.Solver
      ToySolver.Data.MIP.Solver.Base
      ToySolver.Data.MIP.Solver.CBC
+     ToySolver.Data.MIP.Solver.CPLEX
      ToySolver.Data.MIP.Solver.Glpsol
      ToySolver.Data.MIP.Solver.GurobiCl
      ToySolver.Data.MIP.Solver.LPSolve
