add ToySolver.Graph.Dijkstra and ToySolver.Graph.FloydWarshall

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -333,6 +333,8 @@ Library
      ToySolver.Data.Polynomial.Interpolation.Lagrange
      ToySolver.Data.Var
      ToySolver.Graph.BellmanFord
+     ToySolver.Graph.Dijkstra
+     ToySolver.Graph.FloydWarshall
      ToySolver.QBF
      ToySolver.SAT
      ToySolver.SAT.Encoder.Integer
