--- a/.travis.yml
+++ b/.travis.yml
@@ -49,3 +49,10 @@ after_script:
 - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj
 - ./shc toysolver TestSuite TestPolynomial
 
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/d83a1749bd96e9513d76
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
