--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,17 @@ sudo: false
 # Do not choose a language; we provide our own build tools.
 language: generic
 
-env:
-- GHCVER=8.0.1 STACK_YAML=stack-travis.yaml
+matrix:
+  include:
+    - env: STACK_YAML=stack-travis.yaml RESOLVER=lts-8.16 GHCVER=8.0.1 COVERAGE=1
+      compiler: ": #GHC 8.0.2"
+      addons: {apt: {packages: [libgmp-dev,coinor-libcbc0,glpk,lp-solve]}}
+    - env: STACK_YAML=stack-travis.yaml RESOLVER=lts-6.33 GHCVER=7.10.3
+      compiler: ": #GHC 7.10.3"
+      addons: {apt: {packages: [libgmp-dev,coinor-libcbc0,glpk,lp-solve]}}
+    - env: STACK_YAML=stack-travis.yaml RESOLVER=lts-2.22 GHCVER=7.8.4
+      compiler: ": #GHC 7.8.4"
+      addons: {apt: {packages: [libgmp-dev,coinor-libcbc0,glpk,lp-solve]}}
 
 # Caching so the next build will be fast too.
 cache:
@@ -39,15 +48,15 @@ before_install:
 
 install:
 # Build dependencies
-- stack --stack-yaml=$STACK_YAML --no-terminal --install-ghc test --only-dependencies --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve
+- stack --stack-yaml=$STACK_YAML --resolver=$RESOLVER --no-terminal --install-ghc test --only-dependencies --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve
 
 script:
 # Build the package, its tests, and its docs and run the tests
-- stack --stack-yaml=$STACK_YAML --no-terminal test --haddock --no-haddock-deps --coverage --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve
+- stack --stack-yaml=$STACK_YAML --resolver=$RESOLVER --no-terminal test --haddock --no-haddock-deps --coverage --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC --flag toysolver:TestGlpsol --flag toysolver:TestLPSolve
 
 after_script:
-- travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj
-- ./shc toysolver TestSuite TestPolynomial
+- "[ -n \"$COVERAGE\" ] && travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-$GHCVER.tar.bz2 | tar -xj"
+- "[ -n \"$COVERAGE\" ] && ./shc toysolver TestSuite TestPolynomial"
 
 notifications:
   webhooks:
