--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ language: generic
 
 matrix:
   include:
+    - env: STACK_YAML=stack-travis-ghc-8.2.yaml RESOLVER=nightly-2017-08-30 GHCVER=8.2.1
+      compiler: ": #GHC 8.2.1"
+      addons: {apt: {packages: [libgmp-dev,coinor-cbc,glpk-utils,lp-solve]}}
     - env: STACK_YAML=stack-travis.yaml RESOLVER=lts-9.2 GHCVER=8.0.1 COVERAGE=1
       compiler: ": #GHC 8.0.2"
       addons: {apt: {packages: [libgmp-dev,coinor-cbc,glpk-utils,lp-solve]}}
