--- a/stack-travis-ghc-8.2.yaml
+++ b/stack-travis-ghc-8.2.yaml
@@ -52,12 +52,13 @@ extra-deps:
 - intern-0.9.1.4
 - queue-0.1.2
 - log-domain-0.11.2
-- megaparsec-5.3.1
+- statistics-0.13.3.0
+- xml-conduit-1.4.0.4
 - OptDir-0.0.3
 - data-interval-1.3.0
 - extended-reals-0.2.2.0
 - finite-field-0.9.0
-- pseudo-boolean-0.1.5.0
+- pseudo-boolean-0.1.6.0
 - sign-0.4.3
 - OpenCL-1.0.3.4
 
