--- a/stack-travis-ghc-7.10.yaml
+++ b/stack-travis-ghc-7.10.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2017-08-30
+resolver: lts-6.33
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -47,14 +47,12 @@ packages:
 extra-deps:
 - intern-0.9.1.4
 - queue-0.1.2
-- log-domain-0.11.2
-- logic-TPTP-0.4.5.0
-- megaparsec-5.3.1
 - OptDir-0.0.3
+- logic-TPTP-0.4.4.0 # logic-TPTP-0.4.5.0 requires transformers-compat >=0.5 but lts-6.33 provides transformers-compat-0.4.0.4
 - data-interval-1.3.0
 - extended-reals-0.2.2.0
 - finite-field-0.9.0
-- pseudo-boolean-0.1.5.0
+- pseudo-boolean-0.1.6.0
 - sign-0.4.3
 - OpenCL-1.0.3.4
 
@@ -64,6 +62,12 @@ extra-deps:
 
 # Override default flag values for local packages and extra-deps
 flags: {}
+#flags:
+#  toysolver:
+#    BuildToyFMF: true
+#    BuildSamplePrograms: true
+#    BuildMiscPrograms: true
+#    OpenCL: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
