--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -380,8 +380,8 @@ Library
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
      ToySolver.SAT.MUS.Base
+     ToySolver.SAT.MUS.Deletion
      ToySolver.SAT.MUS.Insertion
-     ToySolver.SAT.MUS.Linear
      ToySolver.SAT.MUS.QuickXplain
      ToySolver.SAT.MUS.Enum.Base
      ToySolver.SAT.MUS.Enum.CAMUS
