appveyor: build binary package and register it as an artifact

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,3 +24,9 @@ test_script:
 # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
 # descriptor
 - echo "" | stack --no-terminal test --bench --no-run-benchmarks --flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:TestCBC
+
+after_test:
+- stack --install-ghc runghc --package turtle appveyor_build_artifacts.hs
+
+artifacts:
+  - path: '*.7z'
