--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,12 @@ environment:
   global:
     STACK_ROOT: "c:\\sr"
 
+platform:
+- x86
+- x64
+
 install:
-#- curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64
-- curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-i386
+- if %PLATFORM%==x86 (curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-i386) else (curl -ostack.zip -L --insecure http://www.stackage.org/stack/windows-x86_64)
 - 7z x stack.zip stack.exe
 - stack setup > nul
 - curl -oCOIN-OR-1.8.0-win32-msvc12.zip -L --insecure https://www.coin-or.org/download/binary/OptimizationSuite/COIN-OR-1.8.0-win32-msvc12.zip
