ToySolver.Text.SDPFile: change render/renderSparse to produce bytestring Builder instead of ShowS

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -872,6 +872,8 @@ Test-suite TestSuite
   Build-depends:
     array,
     base,
+    bytestring,
+    bytestring-builder,
     containers,
     data-default-class,
     data-interval,
