move build scripts into misc/

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -19,13 +19,13 @@ Extra-Source-Files:
    CHANGELOG.markdown
    COPYING
    COPYING-GPL
-   build_bdist_linux.sh
-   build_bdist_macos.sh
-   build_bdist_win32.sh
-   build_bdist_win64.sh
-   build_bdist_maxsat_evaluation.sh
-   build_bdist_pb_evaluation.sh
-   build_bdist_qbf_evaluation.sh
+   misc/build_bdist_linux.sh
+   misc/build_bdist_macos.sh
+   misc/build_bdist_win32.sh
+   misc/build_bdist_win64.sh
+   misc/build_bdist_maxsat_evaluation.sh
+   misc/build_bdist_pb_evaluation.sh
+   misc/build_bdist_qbf_evaluation.sh
    misc/maxsat/toysat/README.md
    misc/maxsat/toysat/toysat
    misc/maxsat/toysat_ls/README.md
