--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -247,12 +247,12 @@ Library
      ToySolver.Arith.MIPSolver2
      ToySolver.Arith.OmegaTest
      ToySolver.Arith.OmegaTest.Base
+     ToySolver.Arith.Simplex
+     ToySolver.Arith.Simplex.Simple
      ToySolver.Arith.Simplex.Textbook
      ToySolver.Arith.Simplex.Textbook.LPSolver
      ToySolver.Arith.Simplex.Textbook.LPSolver.Simple
      ToySolver.Arith.Simplex.Textbook.MIPSolver.Simple
-     ToySolver.Arith.Simplex2
-     ToySolver.Arith.Simplex2.Simple
      ToySolver.Arith.VirtualSubstitution
      ToySolver.BitVector
      ToySolver.BitVector.Base
@@ -862,8 +862,8 @@ Test-suite TestSuite
     Test.QBF
     Test.SAT
     Test.SDPFile
+    Test.Simplex
     Test.SimplexTextbook
-    Test.Simplex2
     Test.SMT
     Test.SMTLIB2Solver
     Test.Smtlib
