appveyor: configure to publish artifacts to GitHub Releases

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,3 +33,12 @@ after_test:
 
 artifacts:
   - path: '*.7z'
+
+deploy:
+- provider: GitHub
+  auth_token:
+    secure: F8cldz47mQ0lW3O9uCEneU5LRklWcKw8JbPuh5BDYA2TfyeqC//GO8vl8/wmBy3Z
+  artifact: '*.7z'
+  release: $(appveyor_repo_tag_name)
+  on:
+    appveyor_repo_tag: true
